# Backend-Middleware-ROS

./: README.md  docker-compose.yml
Part-3/: README.md
backend-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.API.md  README.md  docker-compose-backend-prod.yml  package-lock.json  package.json
backend-gateway/prisma/: schema.prisma
backend-gateway/src/app/api/: README.md
backend-gateway/src/app/api/auth/login/: route.ts
backend-gateway/src/app/api/auth/me/: route.ts
backend-gateway/src/app/api/auth/register/: route.ts
backend-gateway/src/app/api/device/: route.ts
backend-gateway/src/app/api/device/stack/: route.ts
backend-gateway/src/app/api/device/summary/: route.ts
backend-gateway/src/dtos/: api.ts  entities.ts
backend-gateway/src/lib/: auth.ts  db.ts  jwt.ts  logger.ts  prisma.ts  redis.ts  validation.ts
database/: 00_extensions.sql  01_init.sql  02_seed.sql
robotics-middleware/: .dockerignore  .env.example  .gitignore  Dockerfile  README.ROS.md  README.md  docker-compose.yml  pyproject.toml
robotics-middleware/app/: dependencies.py  main.py
robotics-middleware/app/core/: config.py  db.py  dto.py  logging.py  models.py  redis_consumer.py  ros_bridge.py  ros_worker.py  worker.py
robotics-middleware/app/ros/: middleware_node.py
ros_robot/: .dockerignore  .env.example  Dockerfile  pyproject.toml  robot_node.py
ros_robot/core/: config.py  dto.py
ros_robots/: robot_1_node.py  robot_2_node.py
