[project]
name = "robotics-middleware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.43",
]
